--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Chatbase Chatbot Embed -->
   <script src="https://www.chatbase.co/embed.min.js"
     chatbotId="qzo55JsjGHMxtYCz2T5MD"
-    domain="www.chatbase.co">
+    domain="asthanashivam2000.github.io">
   </script>
 </body>
 </html>
