--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <h1>Welcome to Resume Buddy 🤖</h1>
   <p>Ask me anything about building resumes, tools, skills, and job roles!</p>
 
-  <!-- Chatbase Chatbot Embed -->
-  <script src="https://www.chatbase.co/embed.min.js"
-    chatbotId="qzo55JsjGHMxtYCz2T5MD"
-    domain="asthanashivam2000.github.io">
-  </script>
+  <!-- Embed full chat page as iframe -->
+  <iframe src="https://www.chatbase.co/chatbot-iframe/qzo55JsjGHMxtYCz2T5MD"
+          width="100%"
+          height="600"
+          style="border:none;">
+  </iframe>
 </body>
 </html>
