--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <h1>Welcome to Resume Buddy 🤖</h1>
   <p>Ask me anything about building resumes, tools, skills, and job roles!</p>
 
-  <!-- Embed full chat page as iframe -->
-  <iframe src="https://www.chatbase.co/chatbot-iframe/qzo55JsjGHMxtYCz2T5MD"
-          width="100%"
-          height="600"
-          style="border:none;">
-  </iframe>
+  <!-- Chatbase Chatbot Embed -->
+  <script src="https://www.chatbase.co/embed.min.js"
+    chatbotId="qzo55JsjGHMxtYCz2T5MD"
+    domain="asthanashivam2000.github.io">
+  </script>
 </body>
 </html>
